--- a/src/assets/icon/iconfont.css
+++ b/src/assets/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4446444 */
-  src: url('iconfont.woff2?t=1709096577295') format('woff2'),
-       url('iconfont.woff?t=1709096577295') format('woff'),
-       url('iconfont.ttf?t=1709096577295') format('truetype');
+  src: url('iconfont.woff2?t=1710483890106') format('woff2'),
+       url('iconfont.woff?t=1710483890106') format('woff'),
+       url('iconfont.ttf?t=1710483890106') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-single_arrow:before {
+  content: "\e623";
 }
 
 .icon-xiangxiazhankai:before {
